Fixing kbd background color for contrast

--- a/CSS/LiebeCV.css
+++ b/CSS/LiebeCV.css
@@ -115,3 +115,7 @@ h2.pedagogyH2 {
 h3.subhead {
 	text-align: center;
 }
+
+kbd {
+    background-color: #BFC9ED;
+}
